--- a/style.css
+++ b/style.css
@@ -4,6 +4,6 @@
 	Author: Omar Ashraf
 	Description: Traning Wordpress Theme made with elzero channel
 	Version: 0.0.0
-	Tags: elzero, Oaik, Wordpress, Black
+	Tags: elzero, Oaik, Wordpress, Black, Theme
 	
 */
