--- a/css/main.css
+++ b/css/main.css
@@ -10,26 +10,46 @@ body {
 	background-color: #eceff1
 }
 
+.white-text > a {
+	color: #FFF !important;
+}
+
 /*
 	=== Blogs Style
 */
 
-.card .card-title a {color: #FFF}
+.home-page .card .card-title a {color: #FFF}
 
-.card .tags a {
+.home-page .card .tags a {
 	background-color: rgba(51,51,51,0.7);
 	color: #DDD;
 	transition: 0.5s all ease-in-out;
 	font-size: 0.8em
 }
 
-.card .tags a:hover {
+.home-page .card .tags a:hover {
 	background-color: rgba(51,51,51,0.5);
 	color: #AAA
 }
 
-.card i.left {
+.home-page .card i.left {
 	margin-right: 5px
 }
 
-.card .card-action span#admin-name a {margin-right: 0;}
+.home-page .card .card-action span#admin-name a {margin-right: 0;}
+
+/*
+	=== Single Post page
+*/
+
+.main-post .card .post-edit-link{color: #e0e0e0 }
+
+.main-post .card .tags a {
+	color: #DDD;
+	transition: 0.5s all ease-in-out;
+	font-size: 0.8em
+}
+
+.main-post .card .tags a:hover {
+	color: #AAA
+}
